--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <!-- Open Graph tags for rich preview in Discord -->
   <meta property="og:title" content="Funny Cat GIF">
   <meta property="og:description" content="Check out this funny cat GIF!">
-  <meta property="og:image" content="https://gwishyman.github.io/funny-cat/cat.gif">
+  <meta property="og:image" content="https://gwishyman.github.io/middleclickdiscord/cat.gif">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://gwishym.github.io/funny-cat">
+  <meta property="og:url" content="https://gwishyman.github.io/middleclickdiscord">
 </head>
 <body>
   <h1>Funny Cat GIF</h1>
