--- a/index.html
+++ b/index.html
@@ -3,16 +3,29 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Funny Cat GIF</title>
-  <!-- Open Graph tags for rich preview in Discord -->
-  <meta property="og:title" content="Funny Cat GIF">
-  <meta property="og:description" content="Check out this funny cat GIF!">
+  <title>Middleclick Discord GIF</title>
+  <!-- Open Graph so Discord shows preview -->
+  <meta property="og:title" content="Middleclick Discord GIF NOW">
+  <meta property="og:description" content="Check out this GIF!">
   <meta property="og:image" content="https://gwishyman.github.io/middleclickdiscord/cat.gif">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://gwishyman.github.io/middleclickdiscord">
+  <meta property="og:url" content="https://gwishyman.github.io/middleclickdiscord/">
+  <style>
+    body {
+      margin: 0;
+      background: black;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    img {
+      max-width: 100%;
+      max-height: 100%;
+    }
+  </style>
 </head>
 <body>
-  <h1>Funny Cat GIF</h1>
-  <img src="cat.gif" alt="Funny cat GIF">
+  <img src="cat.gif" alt="Middleclick Discord GIF">
 </body>
 </html>
