--- a/index.html
+++ b/index.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Middleclick Discord GIF</title>
-  <!-- Open Graph so Discord shows preview -->
-  <meta property="og:title" content="Middleclick Discord GIF NOW">
-  <meta property="og:description" content="Check out this GIF!">
-  <meta property="og:image" content="https://gwishyman.github.io/middleclickdiscord/cat.gif">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://gwishyman.github.io/middleclickdiscord/">
-  <style>
-    body {
-      margin: 0;
-      background: black;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    img {
-      max-width: 100%;
-      max-height: 100%;
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title></title>
+<meta property="og:title" content="">
+<meta property="og:description" content="">
+<meta property="og:image" content="https://gwishyman.github.io/middleclickdiscord/cat.gif">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://gwishyman.github.io/middleclickdiscord/">
+<style>
+  body {
+    margin: 0;
+    background: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+  img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+</style>
 </head>
 <body>
-  <img src="cat.gif" alt="Middleclick Discord GIF">
+  <img src="cat.gif" alt="">
 </body>
 </html>
